style: Define full-height layout and enable scrolling when necessary Set the height of both <html> and <body> to 100vh (100% of viewport height) ensures the entire page is limited to the viewport height. overflow: auto ensure scrollbars appear if content exceeds the eight

--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+}
+
+html, body {
+  height: 100vh;
+  overflow: auto;
 }
 
 body {
@@ -10,10 +14,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    padding: 50px;
-    margin: 10px;
     background-color: #202020; 
+    font-family: Arial, sans-serif;
 }
 
 .etch-frame {
@@ -22,11 +24,11 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  padding: 50px;
+  padding: 65px;
   margin: 10px;
   border: 1px solid rgb(6, 98, 54);
   background-color: #c62828;
-  box-shadow: inset 10px 0px 5px 5px #cd4444, 
+  box-shadow: inset 10px 0px 5px 5px #d45252, 
               inset -10px -10px rgb(134, 29, 29);
   border-radius: 100px;
 }
@@ -34,8 +36,8 @@ body {
 .container{
     display: flex;
     flex-wrap: wrap; /* Allows items to wrap to the next line */
-    width: 800px;
-    height: 800px;
+    width: 650px;
+    height: 650px;
     border: 1px solid rgb(187, 184, 184);  
     background-color: lightgrey;
     border-radius: 10px;
@@ -43,10 +45,10 @@ body {
 }
 
 .clickBtn{
-  margin-bottom: auto;
+  margin-bottom: 20px;
   background-color: #1976d2;
   color: white;
-  padding: 15px;
+  padding: 20px;
   border-radius: 10px;
 }
 
@@ -54,6 +56,4 @@ body {
   background-color: #0b4c8e;
 }
 
-.clear-and-knob-btn{
-  margin-top: auto;
-}
+
